--- a/app/post.html
+++ b/app/post.html
@@ -118,13 +118,11 @@
                     <a href="#">Terms</a>
                     <a href="#">Top</a>
                 </p>
-                <p class="copywrite">Copy right ! © 2015</p>
+            <p class="copywrite">© 2015 .... Hand crafted with care. Copy, Right &#9786; </p>
             </div>
         </div>
     </footer>
-
     <!-- end footer -->
-
 
     <!-- build:js js/jquery.min.js -->
     <script src="../bower_components/jquery/dist/jquery.js "></script>
