--- a/app/topnav.html
+++ b/app/topnav.html
@@ -79,21 +79,16 @@
 
 
     <!-- footer -->
-
-    <footer class="row">
-        <div class="large-12 columns">
-            <div class="row">
-                <div class="large-6 columns">
-                    <!--
-                    <p>© None ...</p>
-                    -->
-                </div>
-                <div class="large-6 columns">
-                    <ul class="inline-list right">
-                        <li><a href="#">...</a>
-                        </li>
-                    </ul>
-                </div>
+    <footer class="footer">
+        <div class="row">
+            <div class="small-12 columns">
+                <p class="slogan"></p>
+                <p class="links">
+                    <a href="#">Home</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Top</a>
+                </p>
+            <p class="copywrite">© 2015 .... Hand crafted with care. Copy, Right &#9786; </p>
             </div>
         </div>
     </footer>
