--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Sample" />
-    <title>Sample site template</title>
+    <title>Site template</title>
 
     <!-- build:css css/foundation.min.css -->
     <link rel="stylesheet" href="../bower_components/foundation/css/foundation.css" />
